# PyFireConsole

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
pyfireconsole/: __init__.py
pyfireconsole/console/: pyfireconsole.py  run_console.py
pyfireconsole/db/: connection.py
pyfireconsole/models/: association.py  firestore_model.py  pyfire_model.py
pyfireconsole/queries/: abstract_query.py  all_query.py  delete_query.py  get_query.py  order_query.py  query.py  query_manager.py  query_runner.py  save_query.py  where_clouse.py  where_query.py
samples/: console_sample.py  console_with_model_dir_sample.py  simple_sample.py
tests/: test_usecase.py
